add custom fonts

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -8,7 +8,11 @@
     <title>MohamadAmin Gharibi</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body class="pt-10 pb-12">
+
+<header>
+    <h1 class="">Amin Gharibi</h1>
+</header>
 
 <script src="scripts/app.js"></script>
 </body>
