make header for desktop and customize tailwind base

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -6,12 +6,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MohamadAmin Gharibi</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body class="pt-10 pb-12">
 
-<header>
-    <h1 class="">Amin Gharibi</h1>
+<header class="container max-w-[1193px] flex justify-between items-center">
+    <h1 class="font-dm500 text-gradient-1 text-2xl">Amin Gharibi</h1>
+    <div class="flex items-center gap-x-12 text-darkGray">
+        <nav>
+            <ul class="flex gap-x-16 font-dm500 text-xl">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Tech Stack</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="flex gap-x-5">
+            <a target="_blank" href="https://github.com/Amin-Gharibi">
+                <img class="w-[30px] h-[30px]" src="./img/github-icon.svg" alt="Github">
+            </a>
+            <a target="_blank" href="https://t.me/AmiinGharibi">
+                <img class="w-[30px] h-[30px]" src="./img/telegram-icon.svg" alt="Telegram">
+            </a>
+            <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
+                <img class="w-[30px] h-[30px]" src="./img/linked-in-icon.svg" alt="LinkedIn">
+            </a>
+        </div>
+    </div>
 </header>
 
 <script src="scripts/app.js"></script>
