create introduction section for desktop

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -18,6 +18,7 @@
 
 <header class="container max-w-[1193px] flex justify-between items-center">
     <h1 class="font-dm500 text-gradient-1 text-2xl sm:text-xl md:text-2xl">Amin Gharibi</h1>
+    <!--desktop header-->
     <div class="flex items-center sm:gap-x-3  lg:gap-x-12 text-darkGray">
         <nav class="hidden sm:block">
             <ul class="flex sm:gap-x-3 md:gap-x-5 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
@@ -40,6 +41,7 @@
             </a>
         </div>
     </div>
+    <!--mobile header-->
     <div class="sm:hidden ">
         <div class="hamburger-menu-icon relative">
             <svg class="w-8 h-8 text-darkGray">
@@ -69,6 +71,29 @@
         </div>
     </div>
 </header>
+
+<main class="mt-56 container max-w-[1193px]">
+    <!--introduction-->
+    <div class="flex justify-between items-center">
+        <!--text-->
+        <div>
+            <h2 class="font-poppins700 text-6xl text-purple leading-[70px]">Hi <img class="inline" src="./img/emojis/wave.png" alt="wave-emoji">,
+                <br>
+                My name is
+                <br>
+                <span class="text-gradient-2">MohamadAmin Gharibi</span>
+                <br>
+                I develop web pages <img class="inline" src="./img/emojis/kick.png" alt="kick-emoji">
+            </h2>
+        </div>
+        <!--pic-->
+        <div class="pic-container p-2 rounded-full overflow-hidden">
+            <div class="w-80 h-80 bg-dark rounded-full">
+                <!--image place-->
+            </div>
+        </div>
+    </div>
+</main>
 
 <script src="scripts/app.js" type="module"></script>
 </body>
