refactor showing the mobile navbar

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -8,7 +8,7 @@
     <title>MohamadAmin Gharibi</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body class="pt-10 pb-12 overflow-hidden">
+<body class="pt-10 pb-12">
 <svg class="hidden">
     <symbol id="burger-menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -48,7 +48,7 @@
                 <use href="#burger-menu"></use>
             </svg>
 
-            <div class="header--menu__mobile absolute top-full right-1 w-64 h-max p-5 rounded shadow-custom-shadow transition-all max-h-0 max-w-0 opacity-0 invisible">
+            <div class="header--menu__mobile absolute top-full right-20 w-64 h-max p-5 rounded shadow-custom-shadow bg-white transition-all max-h-0 max-w-0 opacity-0 invisible z-50">
                 <ul class="flex flex-col gap-y-3 text-lg text-darkGray font-dm500">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -74,7 +74,7 @@
 
 <main class="mt-56 container max-w-[1193px]">
     <!--introduction-->
-    <div class="flex justify-between items-center">
+    <div class="flex flex-wrap-reverse justify-center xl:justify-between items-center">
         <!--text-->
         <div>
             <h2 class="font-poppins700 text-6xl text-purple leading-[70px]">Hi <img class="inline" src="./img/emojis/wave.png" alt="wave-emoji">,
