make introduction section full responsive

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -72,23 +72,24 @@
     </div>
 </header>
 
-<main class="mt-56 container max-w-[1193px]">
+<main class="mt-10 sm:mt-16 md:mt-20 lg:mt-28 xl:mt-56 container max-w-[1193px]">
     <!--introduction-->
-    <div class="flex flex-wrap-reverse justify-center xl:justify-between items-center">
+    <div class="flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
         <!--text-->
         <div>
-            <h2 class="font-poppins700 text-6xl text-purple leading-[70px]">Hi <img class="inline" src="./img/emojis/wave.png" alt="wave-emoji">,
+            <h2 class="text-center lg:text-start font-poppins700 text-3xl xs:text-4xl md:text-6xl text-purple leading-10 md:leading-[70px]">
+                Hi <img class="inline-block w-9 h-9 md:w-max md:h-max" src="./img/emojis/wave.png" alt="wave-emoji">,
                 <br>
                 My name is
                 <br>
                 <span class="text-gradient-2">MohamadAmin Gharibi</span>
                 <br>
-                I develop web pages <img class="inline" src="./img/emojis/kick.png" alt="kick-emoji">
+                I develop web pages <img class="inline-block w-9 h-9 md:w-max md:h-max" src="./img/emojis/kick.png" alt="kick-emoji">
             </h2>
         </div>
         <!--pic-->
         <div class="pic-container p-2 rounded-full overflow-hidden">
-            <div class="w-80 h-80 bg-dark rounded-full">
+            <div class="w-40 h-40 xs:w-80 xs:h-80 bg-dark rounded-full">
                 <!--image place-->
             </div>
         </div>
