--- a/public/index-en.html
+++ b/public/index-en.html
@@ -94,6 +94,37 @@
             </div>
         </div>
     </div>
+    <!--tech stack-->
+    <div class="mt-80">
+        <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
+            My Tech Stack
+        </h1>
+        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray text-center mt-3">
+            Technologies I've been working with recently
+        </p>
+        <div class="mt-36 tech-stack--infinite-swiper overflow-hidden">
+            <img class="first" src="https://skillicons.dev/icons?i=html" alt="HTML5"/>
+            <img src="https://skillicons.dev/icons?i=css" alt="CSS3"/>
+            <img src="https://skillicons.dev/icons?i=javascript" alt="JavaScript"/>
+            <img src="https://skillicons.dev/icons?i=tailwindcss" alt="TailwindCss"/>
+            <img src="https://skillicons.dev/icons?i=bootstrap" alt="Bootstrap"/>
+            <img src="https://skillicons.dev/icons?i=git" alt="Git"/>
+            <img src="https://skillicons.dev/icons?i=npm" alt="NPM"/>
+            <img src="https://skillicons.dev/icons?i=regex" alt="RegEx"/>
+            <img src="https://skillicons.dev/icons?i=python" alt="Python"/>
+        </div>
+        <div class="mt-20 tech-stack--infinite-swiper__reverse overflow-hidden">
+            <img class="first" src="https://skillicons.dev/icons?i=python" alt="Python"/>
+            <img src="https://skillicons.dev/icons?i=regex" alt="RegEx"/>
+            <img src="https://skillicons.dev/icons?i=npm" alt="NPM"/>
+            <img src="https://skillicons.dev/icons?i=git" alt="Git"/>
+            <img src="https://skillicons.dev/icons?i=bootstrap" alt="Bootstrap"/>
+            <img src="https://skillicons.dev/icons?i=tailwindcss" alt="TailwindCss"/>
+            <img src="https://skillicons.dev/icons?i=javascript" alt="JavaScript"/>
+            <img src="https://skillicons.dev/icons?i=css" alt="CSS3"/>
+            <img src="https://skillicons.dev/icons?i=html" alt="HTML5"/>
+        </div>
+    </div>
 </main>
 
 <script src="scripts/app.js" type="module"></script>
