change images order in the seconds swiper

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -114,15 +114,15 @@
             <img src="https://skillicons.dev/icons?i=python" alt="Python"/>
         </div>
         <div class="mt-20 tech-stack--infinite-swiper__reverse overflow-hidden">
-            <img class="first" src="https://skillicons.dev/icons?i=python" alt="Python"/>
-            <img src="https://skillicons.dev/icons?i=regex" alt="RegEx"/>
-            <img src="https://skillicons.dev/icons?i=npm" alt="NPM"/>
-            <img src="https://skillicons.dev/icons?i=git" alt="Git"/>
-            <img src="https://skillicons.dev/icons?i=bootstrap" alt="Bootstrap"/>
-            <img src="https://skillicons.dev/icons?i=tailwindcss" alt="TailwindCss"/>
-            <img src="https://skillicons.dev/icons?i=javascript" alt="JavaScript"/>
+            <img class="first" src="https://skillicons.dev/icons?i=html" alt="HTML5"/>
             <img src="https://skillicons.dev/icons?i=css" alt="CSS3"/>
-            <img src="https://skillicons.dev/icons?i=html" alt="HTML5"/>
+            <img src="https://skillicons.dev/icons?i=javascript" alt="JavaScript"/>
+            <img src="https://skillicons.dev/icons?i=tailwindcss" alt="TailwindCss"/>
+            <img src="https://skillicons.dev/icons?i=bootstrap" alt="Bootstrap"/>
+            <img src="https://skillicons.dev/icons?i=git" alt="Git"/>
+            <img src="https://skillicons.dev/icons?i=npm" alt="NPM"/>
+            <img src="https://skillicons.dev/icons?i=regex" alt="RegEx"/>
+            <img src="https://skillicons.dev/icons?i=python" alt="Python"/>
         </div>
     </div>
 </main>
