create projects section full responsive

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -31,13 +31,13 @@
         </nav>
         <div class="hidden xs:flex gap-x-6 sm:gap-x-3 lg:gap-x-5">
             <a target="_blank" href="https://github.com/Amin-Gharibi">
-                <img class="w-[30px] h-[30px]" src="./img/github-icon.svg" alt="Github">
+                <img class="w-[30px] h-[30px]" src="img/icons/github-icon.svg" alt="Github">
             </a>
             <a target="_blank" href="https://t.me/AmiinGharibi">
-                <img class="w-[30px] h-[30px]" src="./img/telegram-icon.svg" alt="Telegram">
+                <img class="w-[30px] h-[30px]" src="img/icons/telegram-icon.svg" alt="Telegram">
             </a>
             <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                <img class="w-[30px] h-[30px]" src="./img/linked-in-icon.svg" alt="LinkedIn">
+                <img class="w-[30px] h-[30px]" src="img/icons/linked-in-icon.svg" alt="LinkedIn">
             </a>
         </div>
     </div>
@@ -58,13 +58,13 @@
                 </ul>
                 <div class="flex justify-center items-center gap-x-7 mt-6">
                     <a target="_blank" href="https://github.com/Amin-Gharibi">
-                        <img class="w-[30px] h-[30px]" src="./img/github-icon.svg" alt="Github">
+                        <img class="w-[30px] h-[30px]" src="img/icons/github-icon.svg" alt="Github">
                     </a>
                     <a target="_blank" href="https://t.me/AmiinGharibi">
-                        <img class="w-[30px] h-[30px]" src="./img/telegram-icon.svg" alt="Telegram">
+                        <img class="w-[30px] h-[30px]" src="img/icons/telegram-icon.svg" alt="Telegram">
                     </a>
                     <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                        <img class="w-[30px] h-[30px]" src="./img/linked-in-icon.svg" alt="LinkedIn">
+                        <img class="w-[30px] h-[30px]" src="img/icons/linked-in-icon.svg" alt="LinkedIn">
                     </a>
                 </div>
             </div>
@@ -74,7 +74,7 @@
 
 <main class="mt-10 sm:mt-16 md:mt-20 lg:mt-28 xl:mt-56 container max-w-[1193px]">
     <!--introduction-->
-    <div class="flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
+    <div class="container flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
         <!--text-->
         <div>
             <h2 class="text-center lg:text-start font-poppins700 text-3xl xs:text-4xl md:text-6xl text-purple leading-10 md:leading-[70px]">
@@ -95,7 +95,7 @@
         </div>
     </div>
     <!--tech stack-->
-    <div class="mt-80">
+    <div class="container mt-80">
         <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
             My Tech Stack
         </h1>
@@ -123,6 +123,179 @@
             <img src="https://skillicons.dev/icons?i=npm" alt="NPM"/>
             <img src="https://skillicons.dev/icons?i=regex" alt="RegEx"/>
             <img src="https://skillicons.dev/icons?i=python" alt="Python"/>
+        </div>
+    </div>
+    <!--projects-->
+    <div class="container mt-52">
+        <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
+            Projects
+        </h1>
+        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray text-center mt-3">
+            Things I've built so far
+        </p>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 grid-rows-2 gap-10 xl:gap-[50px] mt-24">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+                <img src="./img/project-cover-1.jpg" alt="cover">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                        Project Tile Goes Here
+                    </h2>
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                        This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content
+                    </p>
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                        Tech Stack:
+                        <span class="font-poppins300 xs:text-sm">
+                            Html, JavaScript, Sass, React
+                        </span>
+                    </span>
+                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link Preview</a>
+                        </div>
+                        <div class="flex gap-x-2.5">
+                            <img src="./img/icons/github-icon-black.svg" alt="github-icon">
+                            <a href="#" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </main>
