--- a/public/index-en.html
+++ b/public/index-en.html
@@ -388,11 +388,11 @@
 
 <footer class="mt-52 container max-w-[1193px]">
     <!--contact sections and social media links-->
-    <div class="container flex justify-between items-center text-purple pb-11 border-b-2 border-darkGray/30">
-        <h1 class="text-purple text-2xl font-poppins700">
+    <div class="container flex flex-wrap md:flex-nowrap justify-between items-center gap-y-5 text-purple pb-6 sm:pb-11 border-b-2 border-darkGray/30">
+        <h1 class="text-purple text-2xl md:text-xl lg:text-2xl font-poppins700">
             Amin Gharibi
         </h1>
-        <div class="flex items-center gap-x-8 font-dm400 text-lg">
+        <div class="flex flex-wrap md:flex-nowrap items-center gap-x-8 gap-y-2 font-dm400 text-base xs:text-lg md:text-base lg:text-lg">
             <span>
                 +98 903 193 8364
             </span>
@@ -420,9 +420,9 @@
         </div>
     </div>
     <!--footer nav links-->
-    <div class="container flex justify-between gap-4 mt-12">
+    <div class="container flex flex-wrap justify-between gap-4 mt-6 sm:mt-12">
         <!--nav links-->
-        <div class="flex gap-x-[52px] items-center font-dm400 text-lg text-purple">
+        <div class="flex flex-col sm:flex-row items-start flex-wrap gap-x-[52px] gap-y-2 sm:items-center font-dm400 text-lg text-purple">
             <a href="#">
                 Home
             </a>
