add links to social media to anchor tags

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -46,7 +46,6 @@
     </symbol>
 </svg>
 
-
 <header class="container max-w-[1193px] flex justify-between items-center">
     <h1 class="font-dm500 text-gradient-1 text-2xl sm:text-xl md:text-2xl">Amin Gharibi</h1>
     <!--desktop header-->
@@ -54,10 +53,10 @@
         <nav class="hidden sm:block">
             <ul class="flex sm:gap-x-3 md:gap-x-5 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Tech Stack</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#tech-stack">Tech Stack</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="hidden xs:flex gap-x-6 sm:gap-x-3 lg:gap-x-5">
@@ -117,7 +116,7 @@
 
 <main class="mt-10 sm:mt-16 md:mt-20 lg:mt-28 xl:mt-56 container max-w-[1193px]">
     <!--introduction-->
-    <div class="container flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
+    <div id="about" class="container flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
         <!--text-->
         <div>
             <h2 class="text-center lg:text-start font-poppins700 text-3xl xs:text-4xl md:text-6xl text-purple leading-10 md:leading-[70px]">
@@ -139,7 +138,7 @@
         </div>
     </div>
     <!--tech stack-->
-    <div class="container mt-80">
+    <div id="tech-stack" class="container mt-80">
         <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
             My Tech Stack
         </h1>
@@ -170,7 +169,7 @@
         </div>
     </div>
     <!--projects-->
-    <div class="container mt-52">
+    <div id="projects" class="container mt-52">
         <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
             Projects
         </h1>
@@ -388,7 +387,7 @@
 
 <footer class="mt-52 container max-w-[1193px]">
     <!--contact sections and social media links-->
-    <div class="container flex flex-wrap md:flex-nowrap justify-between items-center gap-y-5 text-purple pb-6 sm:pb-11 border-b-2 border-darkGray/30">
+    <div id="contact" class="container flex flex-wrap md:flex-nowrap justify-between items-center gap-y-5 text-purple pb-6 sm:pb-11 border-b-2 border-darkGray/30">
         <h1 class="text-purple text-2xl md:text-xl lg:text-2xl font-poppins700">
             Amin Gharibi
         </h1>
@@ -401,17 +400,17 @@
             </span>
             <!--social media links-->
             <div class="flex gap-x-5">
-                <a href="#">
+                <a target="_blank" href="https://github.com/Amin-Gharibi">
                     <svg class="w-[30px] h-[30px] fill-purple">
                         <use href="#github-icon"></use>
                     </svg>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://t.me/AmiinGharibi">
                     <svg class="w-[30px] h-[30px] fill-purple rounded-full">
                         <use href="#telegram-icon"></use>
                     </svg>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
                     <svg class="w-[30px] h-[30px] fill-purple">
                         <use href="#linked-in-icon"></use>
                     </svg>
