--- a/public/index-en.html
+++ b/public/index-en.html
@@ -7,6 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MohamadAmin Gharibi</title>
     <link rel="stylesheet" href="./style/style.css">
+    <script type="text/javascript">
+		if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+			document.documentElement.classList.add('dark')
+			localStorage.theme = 'dark'
+		} else {
+			document.documentElement.classList.remove('dark')
+			localStorage.theme = 'light'
+		}
+    </script>
 </head>
 <body class="pt-10 pb-12">
 <svg class="hidden">
@@ -44,14 +53,22 @@
             </g>
         </g>
     </symbol>
+
+    <symbol id="sun-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+    </symbol>
+
+    <symbol id="moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+        <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z" clip-rule="evenodd" />
+    </symbol>
 </svg>
 
 <header class="container max-w-[1193px] flex justify-between items-center">
     <h1 class="font-dm500 text-gradient-1 text-2xl sm:text-xl md:text-2xl">Amin Gharibi</h1>
     <!--desktop header-->
-    <div class="flex items-center sm:gap-x-3  lg:gap-x-12 text-darkGray">
+    <div class="flex items-center sm:gap-x-3  lg:gap-x-10 text-darkGray">
         <nav class="hidden sm:block">
-            <ul class="flex sm:gap-x-3 md:gap-x-5 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
+            <ul class="flex sm:gap-x-3 md:gap-x-3 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#tech-stack">Tech Stack</a></li>
@@ -60,18 +77,23 @@
             </ul>
         </nav>
         <div class="hidden xs:flex gap-x-6 sm:gap-x-3 lg:gap-x-5">
+            <button class="toggle-theme hidden sm:block">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray">
+                    <use></use>
+                </svg>
+            </button>
             <a target="_blank" href="https://github.com/Amin-Gharibi">
-                <svg class="w-[30px] h-[30px] fill-darkGray">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray">
                     <use href="#github-icon"></use>
                 </svg>
             </a>
             <a target="_blank" href="https://t.me/AmiinGharibi">
-                <svg class="w-[30px] h-[30px] fill-darkGray rounded-full">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray rounded-full">
                     <use href="#telegram-icon"></use>
                 </svg>
             </a>
             <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                <svg class="w-[30px] h-[30px] fill-darkGray">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray">
                     <use href="#linked-in-icon"></use>
                 </svg>
             </a>
@@ -93,13 +115,18 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <div class="flex justify-center items-center gap-x-7 mt-6">
+                    <button class="toggle-theme">
+                        <svg class="w-[30px] h-[30px] text-darkGray">
+                            <use></use>
+                        </svg>
+                    </button>
                     <a target="_blank" href="https://github.com/Amin-Gharibi">
                         <svg class="w-[30px] h-[30px] fill-darkGray">
                             <use href="#github-icon"></use>
                         </svg>
                     </a>
                     <a target="_blank" href="https://t.me/AmiinGharibi">
-                        <svg class="w-[30px] h-[30px] fill-darkGray">
+                        <svg class="w-[30px] h-[30px] fill-darkGray rounded-full">
                             <use href="#telegram-icon"></use>
                         </svg>
                     </a>
