--- a/public/index-en.html
+++ b/public/index-en.html
@@ -15,7 +15,7 @@
 		}
     </script>
 </head>
-<body class="pt-10 pb-12 dark:bg-dark">
+<body class="pt-10 pb-12 dark:bg-dark transition-all">
 <svg class="hidden">
     <symbol id="burger-menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor">
@@ -64,7 +64,7 @@
 <header class="container max-w-[1193px] flex justify-between items-center">
     <h1 class="font-dm500 text-gradient-1 text-2xl sm:text-xl md:text-2xl">Amin Gharibi</h1>
     <!--desktop header-->
-    <div class="flex items-center sm:gap-x-3  lg:gap-x-10 text-darkGray">
+    <div class="flex items-center sm:gap-x-3  lg:gap-x-10 text-darkGray dark:text-midGray">
         <nav class="hidden sm:block">
             <ul class="flex sm:gap-x-3 md:gap-x-3 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
                 <li><a href="#">Home</a></li>
@@ -76,25 +76,25 @@
         </nav>
         <div class="hidden xs:flex gap-x-6 sm:gap-x-3 lg:gap-x-5">
             <button class="toggle-theme hidden sm:block">
-                <svg class="hidden dark:block w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray">
+                <svg class="hidden dark:block w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray dark:text-midGray">
                     <use href="#sun-icon"></use>
                 </svg>
-                <svg class="block dark:hidden w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray">
+                <svg class="block dark:hidden w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray dark:text-midGray">
                     <use href="#moon-icon"></use>
                 </svg>
             </button>
             <a target="_blank" href="https://github.com/Amin-Gharibi">
-                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray dark:fill-midGray">
                     <use href="#github-icon"></use>
                 </svg>
             </a>
             <a target="_blank" href="https://t.me/AmiinGharibi">
-                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray rounded-full">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray dark:fill-midGray rounded-full">
                     <use href="#telegram-icon"></use>
                 </svg>
             </a>
             <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray">
+                <svg class="w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] fill-darkGray dark:fill-midGray">
                     <use href="#linked-in-icon"></use>
                 </svg>
             </a>
@@ -103,12 +103,12 @@
     <!--mobile header-->
     <div class="sm:hidden ">
         <div class="hamburger-menu-icon relative">
-            <svg class="w-8 h-8 text-darkGray">
+            <svg class="w-8 h-8 text-darkGray dark:text-midGray">
                 <use href="#burger-menu"></use>
             </svg>
 
-            <div class="header--menu__mobile absolute top-full right-20 w-64 h-max p-5 rounded shadow-custom-shadow bg-white transition-all max-h-0 max-w-0 opacity-0 invisible z-50">
-                <ul class="flex flex-col gap-y-3 text-lg text-darkGray font-dm500">
+            <div class="header--menu__mobile absolute top-full right-20 w-64 h-max p-5 rounded shadow-custom-shadow bg-white dark:bg-dark transition-all max-h-0 max-w-0 opacity-0 invisible z-50">
+                <ul class="flex flex-col gap-y-3 text-lg text-darkGray dark:text-midGray font-dm500">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Tech Stack</a></li>
@@ -117,25 +117,25 @@
                 </ul>
                 <div class="flex justify-center items-center gap-x-7 mt-6">
                     <button class="toggle-theme">
-                        <svg class="hidden dark:block w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray">
+                        <svg class="hidden dark:block w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray dark:text-midGray">
                             <use href="#sun-icon"></use>
                         </svg>
-                        <svg class="block dark:hidden w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray">
+                        <svg class="block dark:hidden w-[30px] h-[30px] sm:w-6 sm:h-6 md:w-7 md:h-7 lg:w-[30px] lg:h-[30px] text-darkGray dark:text-midGray">
                             <use href="#moon-icon"></use>
                         </svg>
                     </button>
                     <a target="_blank" href="https://github.com/Amin-Gharibi">
-                        <svg class="w-[30px] h-[30px] fill-darkGray">
+                        <svg class="w-[30px] h-[30px] fill-darkGray dark:fill-midGray">
                             <use href="#github-icon"></use>
                         </svg>
                     </a>
                     <a target="_blank" href="https://t.me/AmiinGharibi">
-                        <svg class="w-[30px] h-[30px] fill-darkGray rounded-full">
+                        <svg class="w-[30px] h-[30px] fill-darkGray dark:fill-midGray rounded-full">
                             <use href="#telegram-icon"></use>
                         </svg>
                     </a>
                     <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                        <svg class="w-[30px] h-[30px] fill-darkGray">
+                        <svg class="w-[30px] h-[30px] fill-darkGray dark:fill-midGray">
                             <use href="#linked-in-icon"></use>
                         </svg>
                     </a>
