--- a/public/index-en.html
+++ b/public/index-en.html
@@ -150,7 +150,7 @@
     <div id="about" class="container flex flex-wrap-reverse justify-center xl:justify-between items-center gap-y-6">
         <!--text-->
         <div>
-            <h2 class="text-center lg:text-start font-poppins700 text-3xl xs:text-4xl md:text-6xl text-purple leading-10 md:leading-[70px]">
+            <h2 class="text-center lg:text-start font-poppins700 text-3xl xs:text-4xl md:text-6xl text-purple dark:text-white leading-10 md:leading-[70px]">
                 Hi <img class="inline-block w-9 h-9 md:w-max md:h-max" src="./img/emojis/wave.png" alt="wave-emoji">,
                 <br>
                 My name is
