create tech stack section dark mode

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -170,10 +170,10 @@
     </div>
     <!--tech stack-->
     <div id="tech-stack" class="container mt-80">
-        <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
+        <h1 class="text-purple dark:text-lightGray font-poppins700 text-3xl sm:text-5xl text-center">
             My Tech Stack
         </h1>
-        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray text-center mt-3">
+        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray dark:text-midGray text-center mt-3">
             Technologies I've been working with recently
         </p>
         <div class="mt-36 tech-stack--infinite-swiper overflow-hidden">
