--- a/public/index-en.html
+++ b/public/index-en.html
@@ -201,24 +201,24 @@
     </div>
     <!--projects-->
     <div id="projects" class="container mt-52">
-        <h1 class="text-purple font-poppins700 text-3xl sm:text-5xl text-center">
+        <h1 class="text-purple dark:text-lightGray font-poppins700 text-3xl sm:text-5xl text-center">
             Projects
         </h1>
-        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray text-center mt-3">
+        <p class="font-poppins400 text-xl sm:text-2xl text-darkGray dark:text-midGray text-center mt-3">
             Things I've built so far
         </p>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 grid-rows-2 gap-10 xl:gap-[50px] mt-24">
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -226,33 +226,34 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -260,33 +261,34 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -294,33 +296,34 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -328,33 +331,34 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -362,33 +366,34 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
                 <img src="./img/project-cover-1.jpg" alt="cover">
                 <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black">
+                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
                         Project Tile Goes Here
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray">
+                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
                         This is sample project description random things are here in description This is sample project
                         lorem ipsum generator for dummy content
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple">
+                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
                             Html, JavaScript, Sass, React
@@ -396,17 +401,18 @@
                     </span>
                     <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon">
+                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
+                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">Link
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black">
+                            <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
                             <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black">View
+                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
