create footer section's dark mode

--- a/public/index-en.html
+++ b/public/index-en.html
@@ -424,8 +424,8 @@
 
 <footer class="mt-52 container max-w-[1193px]">
     <!--contact sections and social media links-->
-    <div id="contact" class="container flex flex-wrap md:flex-nowrap justify-between items-center gap-y-5 text-purple pb-6 sm:pb-11 border-b-2 border-darkGray/30">
-        <h1 class="text-purple text-2xl md:text-xl lg:text-2xl font-poppins700">
+    <div id="contact" class="container flex flex-wrap md:flex-nowrap justify-between items-center gap-y-5 text-purple dark:text-midGray pb-6 sm:pb-11 border-b-2 border-darkGray/30">
+        <h1 class="text-2xl md:text-xl lg:text-2xl font-poppins700">
             Amin Gharibi
         </h1>
         <div class="flex flex-wrap md:flex-nowrap items-center gap-x-8 gap-y-2 font-dm400 text-base xs:text-lg md:text-base lg:text-lg">
@@ -438,17 +438,17 @@
             <!--social media links-->
             <div class="flex gap-x-5">
                 <a target="_blank" href="https://github.com/Amin-Gharibi">
-                    <svg class="w-[30px] h-[30px] fill-purple">
+                    <svg class="w-[30px] h-[30px] fill-purple dark:fill-midGray">
                         <use href="#github-icon"></use>
                     </svg>
                 </a>
                 <a target="_blank" href="https://t.me/AmiinGharibi">
-                    <svg class="w-[30px] h-[30px] fill-purple rounded-full">
+                    <svg class="w-[30px] h-[30px] fill-purple dark:fill-midGray rounded-full">
                         <use href="#telegram-icon"></use>
                     </svg>
                 </a>
                 <a target="_blank" href="https://linkedin.com/in/MohamadAmin-Gharibi">
-                    <svg class="w-[30px] h-[30px] fill-purple">
+                    <svg class="w-[30px] h-[30px] fill-purple dark:fill-midGray">
                         <use href="#linked-in-icon"></use>
                     </svg>
                 </a>
@@ -458,7 +458,7 @@
     <!--footer nav links-->
     <div class="container flex flex-wrap justify-between gap-4 mt-6 sm:mt-12">
         <!--nav links-->
-        <div class="flex flex-col sm:flex-row items-start flex-wrap gap-x-[52px] gap-y-2 sm:items-center font-dm400 text-lg text-purple">
+        <div class="flex flex-col sm:flex-row items-start flex-wrap gap-x-[52px] gap-y-2 sm:items-center font-dm400 text-lg text-purple dark:text-midGray">
             <a href="#">
                 Home
             </a>
@@ -476,7 +476,7 @@
             </a>
         </div>
         <!--copyright-->
-        <span class="text-darkGray font-poppins400 text-lg">
+        <span class="text-darkGray dark:text-midGray font-poppins400 text-lg">
             Developed By
             <span class="text-gradient-1">
                 Amin Gharibi
