add links to other pages and remove base of persian version of website

--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,11 @@
     <div class="flex items-center sm:gap-x-3  lg:gap-x-10 text-darkGray dark:text-midGray">
         <nav class="hidden sm:block">
             <ul class="flex sm:gap-x-3 md:gap-x-3 lg:gap-x-8 xl:gap-x-16 font-dm500 sm:text-base md:text-xl">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#tech-stack">Tech Stack</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/tech-stack.html">Tech Stack</a></li>
+                <li><a href="/projects.html">Projects</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="hidden xs:flex gap-x-6 sm:gap-x-3 lg:gap-x-5">
@@ -109,11 +109,11 @@
 
             <div class="header--menu__mobile absolute top-full right-20 w-64 h-max p-5 rounded shadow-custom-shadow bg-white dark:bg-dark transition-all max-h-0 max-w-0 opacity-0 invisible z-50">
                 <ul class="flex flex-col gap-y-3 text-lg text-darkGray dark:text-midGray font-dm500">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Tech Stack</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/tech-stack.html">Tech Stack</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                 </ul>
                 <div class="flex justify-center items-center gap-x-7 mt-6">
                     <button class="toggle-theme">
@@ -459,21 +459,11 @@
     <div class="container flex flex-wrap justify-between gap-4 mt-6 sm:mt-12">
         <!--nav links-->
         <div class="flex flex-col sm:flex-row items-start flex-wrap gap-x-[52px] gap-y-2 sm:items-center font-dm400 text-lg text-purple dark:text-midGray">
-            <a href="#">
-                Home
-            </a>
-            <a href="#">
-                About
-            </a>
-            <a href="#">
-                Technologies
-            </a>
-            <a href="#">
-                Projects
-            </a>
-            <a href="#">
-                Contact
-            </a>
+            <a href="/index.html">Home</a>
+            <a href="/about.html">About</a>
+            <a href="/tech-stack.html">Technologies</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/contact.html">Contact</a>
         </div>
         <!--copyright-->
         <span class="text-darkGray dark:text-midGray font-poppins400 text-lg">
